kubernetes/next-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
        - name: nextjs
          image: jlocamuz/next-js-agus-garcia:latest
          ports:
            - containerPort: 3000
