kubernetes/next-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
spec:
  selector:
    app: nextjs
  ports:
    - port: 80         # Puerto en el servicio (externo al cluster)
      targetPort: 3000 # Puerto dentro del contenedor
