kubernetes/next-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: psicoagusgarcia-ingress
  namespace: front
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - psicoagusgarcia.com
    secretName: psicoagusgarcia-tls
  rules:
  - host: psicoagusgarcia.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextjs-service
            port:
              number: 80
